# orb

./: .gitignore  CMakeLists.txt  README.md
debian/: control  install
orb-analog/: CMakeLists.txt  orb_analog_completion.bash
orb-analog/debian/: changelog  copyright
orb-analog/src/: orb.cpp  orb_config.h.in
orb-analog/src/include/: utilities.hpp
orb-core/: CMakeLists.txt  orb_completion.bash  setup.bash
orb-core/.pc/: applied-patches
orb-core/.pc/bash_completion.diff/: orb_completion.bash  setup.bash
orb-core/.pc/hotfix_bash.diff/: orb_completion.bash
orb-core/debian/: changelog  control  copyright  install  postinst  rules
orb-core/debian/patches/: bash_completion.diff  hotfix_bash.diff
orb-core/src/: CMakeLists.txt  orb.cpp
orb-motor/: CMakeLists.txt  orb_motor_completion.bash
orb-motor/debian/: changelog  control  install
orb-motor/debian/patches/: bash_completion.diff
orb-motor/src/: CMakeLists.txt  orb.cpp
orb-upload/: CMakeLists.txt  orb_upload_completion.bash
orb-upload/.pc/bash_completion.diff/src/: orb.cpp
orb-upload/debian/: changelog  control  copyright  rules
orb-upload/debian/patches/: bash_completion.diff  firm_upload.diff  series
orb-upload/src/: CMakeLists.txt  orb.cpp
src/: CMakeLists.txt  orb.cpp
